# evio

./: .clang-tidy  .clangd  .dockerignore  .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .yamlfmt.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  gcovr-src.cfg  gcovr.cfg  justfile  meson.build  meson_options.txt
.github/workflows/: meson.yml
benchmarks/: bench.c  bench.h  bench_async.c  bench_churn.c  bench_churn_connected.c  bench_idle.c  bench_mt_churn.c  bench_poll.c  bench_signal.c  bench_timer.c  bench_workers.c  plot.py  summarize.py
docker/: apt.conf  debian.sources  dpkg.cfg  update-alternatives-clang  update-alternatives-gcc
examples/: async.c  check.c  cleanup.c  fork.c  idle.c  loop.c  once.c  poll.c  prepare.c  signal.c  timer.c
src/: CMakeLists.txt  evio.c  evio.h  evio_alloc.c  evio_alloc.h  evio_async.c  evio_async.h  evio_check.c  evio_check.h  evio_cleanup.c  evio_cleanup.h  evio_core.c  evio_core.h  evio_eventfd.c  evio_eventfd.h  evio_eventfd_sys.h  evio_heap.c  evio_heap.h  evio_idle.c  evio_idle.h  evio_list.c  evio_list.h  evio_loop.c  evio_loop.h  evio_once.c  evio_once.h  evio_poll.c  evio_poll.h  evio_prepare.c  evio_prepare.h  evio_signal.c  evio_signal.h  evio_signal_sys.h  evio_timer.c  evio_timer.h  evio_uring.c  evio_uring.h  evio_uring_stub.c  evio_uring_sys.h  evio_utils.c  (+3 more)
tests/: test.c  test.h  test_alloc.c  test_async.c  test_check.c  test_cleanup.c  test_core.c  test_eventfd.c  test_heap.c  test_idle.c  test_list.c  test_loop.c  test_once.c  test_poll.c  test_prepare.c  test_signal.c  test_timer.c  test_uring.c  test_utils.c  test_version.c
tests/include/: abort.h  assert.h
