option('tests', type: 'boolean', value: false,
       description: 'enable unit tests')
option('examples', type: 'boolean', value: false,
       description: 'build examples')
option('valgrind', type: 'boolean', value: false,
       description: 'run tests with Valgrind')
option('analyzer', type: 'boolean', value: false,
       description: 'use GCC -fanalyzer flag')
